# namnesis

./: .env.example  .gitignore  README.md  pyproject.toml
.clawhub/: lock.json
.github/workflows/: deploy-site.yml
conformance/fixtures/expected_capsule_minimal/: README.md
conformance/fixtures/workspace_minimal/: MEMORY.md
contracts/: .env.example
contracts/script/: Deploy.s.sol
contracts/src/: NamnesisKernel.sol  SoulGuard.sol  SoulToken.sol
contracts/test/: NamnesisKernel.t.sol  SoulGuard.t.sol  SoulToken.t.sol
docs/: 01-PRD.md  02-ARCHITECTURE.md  03-SCHEMAS.md  04-CLI-SPEC.md  05-SECURITY.md  06-CONFORMANCE.md  07-ROADMAP.md  AI-INTEGRATION.md  CHAIN-RECORDS.md  README.md
site/: COPY.md  ENGINEERING.md  IA.md  MACHINE_LAYER.md  PHILOSOPHY.md  README.md  STACK.md  TEMP-AI-INTEGRATION-DRAFT.md  TERMINOLOGY-AUDIT.md  UI.md
site-src/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
skills/usdc-hackathon/: _meta.json
src/namnesis/: __init__.py  cli.py  utils.py
src/resurrectum/: __init__.py  cli.py
test-workspace/: HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md
test-workspace/memory/: contracts.json  events.md
tests/: _check_chain_state.py  _check_sig.py  test_memory_upload_fake.py  test_utils.py
tests/conformance/: test_conformance.py  test_examples.py
tests/integration/: test_cli.py  test_e2e_capsule.py
worker/: .env.example  README.md  deploy-with-proxy.cmd  deploy-with-proxy.ps1  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: abi.ts  index.ts  verify.ts
(+106 files in other folders)
